test/conformance/chainsaw/cli/apply/apply-vps-in-cluster-mode-with-context/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: default
  name: policy-cm
data:
  name: good-pod
