test/conformance/chainsaw/cli/apply/apply-vps-in-cluster-mode-with-context/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: nginx
    image: public.ecr.aws/docker/library/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
  - name: nginx
    image: public.ecr.aws/docker/library/nginx
