test/conformance/chainsaw/cli/apply/apply-vps-in-cluster-mode-with-context/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: check-pod-name-from-configmap
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
      resourceNames: ["good-pod", "bad-pod"]
  variables:
    - name: cm
      expression: >-
        resource.get("v1", "configmaps", object.metadata.namespace, "policy-cm")
  validations:
    - expression: >-
        object.metadata.name == variables.cm.data.name
